<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mechanic.ui.worker.WorkerShopRegFragment"
    android:orientation="vertical"
    android:background="@color/secondary_color"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_first_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/tertiary_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_last_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/primary_color" />

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="150dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/tertiary_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/primary_color"
                android:paddingStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Enter the Shop ID given by your shop owner to link your workplace"
                android:textSize="15sp"
                android:textColor="@color/text_grey"
                android:paddingStart="5dp"
                android:layout_marginBottom="30dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/placeholder_text_color"
                app:boxBackgroundColor="@color/field_color"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopEnd="10dp" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etShopId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your Shop ID"
                    android:paddingVertical="13dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerShopBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register Shop"
                android:textColor="@color/black"
                android:paddingVertical="14dp"
                android:layout_marginBottom="40dp"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
